apply plugin: 'java'

sourceCompatibility = 1.8
version = '1.0'

repositories {
    mavenCentral()
    maven {
        url "https://libraries.minecraft.net/"
    }
}

jar {
    archiveFileName = "VanillaCord.jar"
    destinationDirectory = file "$rootDir/artifacts"
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest.attributes("Main-Class": "uk.co.thinkofdeath.vanillacord.Launch")
    from {
        configurations.compileClasspath.filter {
            !it.name.contains("netty") \
            && !it.name.contains("authlib") \
            && !it.name.contains("commons") \
            && !it.name.contains("log4j")
        }.collect {
            it.isDirectory()? it : zipTree(it)
        }
    }
}

dependencies {
    implementation group: 'org.json', name: 'json', version: '20180130'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.2.4'
    implementation group: 'com.mojang', name: 'authlib', version: '1.5.16'
    implementation group: 'io.netty', name: 'netty-all', version: '4.1.13.Final'
    implementation group: 'org.ow2.asm', name: 'asm', version: '9.1'
    implementation group: 'com.google.guava', name: 'guava', version: '17.0'
    testImplementation group: 'junit', name: 'junit', version: '4.11'
}